# ats2-patience-sort

./: Makefile.am  Makefile.in  README  aminclude_static.am  ats2-patience-sort.pc.in  configure  configure.ac
patience-sort/DATS/: patience-sort.dats
patience-sort/HATS/: patience-sort.hats
patience-sort/SATS/: patience-sort.sats
tests/: try-int-sort.dats  try-stable-sort.dats
